fix mobile overflow scrolling

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 
 *, *:before, *:after {
@@ -11,6 +12,8 @@ html {
 }
 
 body {
+  height: 100%;
+  max-height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-size: 18px;
   position: relative;
@@ -62,7 +65,7 @@ header h1 {
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
@@ -79,11 +82,16 @@ footer {
 
 
 #home, #about, #signup {
-  position: absolute;
+  position: fixed;
   top: 50;
   left: 0;
   right: 0;
   bottom: 0;
+}
+
+#home {
+  height: 100%;
+  overflow: hidden;
 }
 
 /* HOME */
